remove artgame club

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,8 +14,8 @@ menu_settings:
       url: '/manifesto'
     - title: 'meetups'
       url: '/meetups'
-    - title: 'artgame&nbsp;club'
-      url: '/artgame-club'
+    #- title: 'artgame&nbsp;club'
+    #  url: '/artgame-club'
     - title: 'people'
       url:  '/people'
     # - title: 'archive'
